--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "@chris.troutner/npm-lib-boilerplate",
+  "name": "slp-token-media",
   "version": "1.0.0",
-  "description": "A boilerplate for creating an npm library with Semantic Release, linting, and tests.",
+  "description": "A library for retrieving SLP token icons and media",
   "main": "index.js",
   "scripts": {
     "start": "node index.js",
@@ -27,10 +27,10 @@
   "author": "Chris Troutner <chris.troutner@gmail.com>",
   "license": "MIT",
   "apidoc": {
-    "title": "npm-lib-boilerplate",
+    "title": "slp-token-media",
     "url": "localhost:5000"
   },
-  "repository": "christroutner/npm-lib-boilerplate",
+  "repository": "Permissionless-Software-Foundation/slp-token-media",
   "dependencies": {
     "@psf/bch-js": "6.4.5"
   },
