--- a/package.json
+++ b/package.json
@@ -32,13 +32,15 @@
   },
   "repository": "Permissionless-Software-Foundation/slp-token-media",
   "dependencies": {
-    "@psf/bch-js": "6.4.5"
+    "@psf/bch-js": "6.4.5",
+    "slp-mutable-data": "2.2.4"
   },
   "devDependencies": {
     "apidoc": "0.53.0",
     "chai": "4.3.6",
     "husky": "8.0.1",
     "lodash.clonedeep": "4.5.0",
+    "minimal-slp-wallet": "^5.2.1",
     "mocha": "10.0.0",
     "nyc": "15.1.0",
     "semantic-release": "19.0.5",
