--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "chai": "4.3.6",
     "husky": "8.0.1",
     "lodash.clonedeep": "4.5.0",
+    "minimal-ecash-wallet": "1.1.6",
     "minimal-slp-wallet": "5.5.3",
     "mocha": "10.0.0",
     "nyc": "15.1.0",
